--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-scroll": "^1.9.0",
-    "react-spring": "^9.7.3"
+    "react-spring": "^9.7.3",
+    "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
