--- a/package.json
+++ b/package.json
@@ -9,18 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^10.16.15",
+    "@types/body-parser": "^1.19.5",
+    "@types/express": "^4.17.21",
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "flowbite": "^2.2.0",
+    "flowbite-react": "^0.7.0",
+    "framer-motion": "^10.16.16",
     "next": "14.0.4",
     "next-themes": "^0.2.1",
+    "nodemailer": "^6.9.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.12.0",
     "react-scroll": "^1.9.0",
     "react-spring": "^9.7.3",
-    "react-type-animation": "^3.2.0"
+    "react-tippy": "^1.4.0",
+    "react-tooltip": "^5.25.0",
+    "react-type-animation": "^3.2.0",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.10.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
